bin/tests/errors_parser/parser/parser_err_invalid_compiler.swg
#global fileprivate

var a = #toto // swc-expected-error {{parser_err_invalid_compiler}}
